# cockpit_cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  implementation_plan.md  pyproject.toml  review_phase_4_5.md  skills-lock.json  task.md  walkthrough.md
.cockpit/: cockpit.db
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/177100-1774142566/: .server-stopped  architecture.html  models-and-flow.html  modules.html  runtime-and-guards.html  session-lifecycle.html
config/: commands.yaml  connections.example.yaml  datasources.example.yaml  keybindings.yaml  plugins.example.yaml
config/layouts/: default.yaml
config/runbooks/: docker-container-unhealthy.yaml  sqlite-repair-sample.yaml
config/themes/: default.tcss
docs/: releasing.md
docs/migration/: phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md
docs/superpowers/plans/: 2026-03-22-core-platform-spine-plan.md  2026-03-24-stage-2-operator-evolution-plan.md  2026-03-24-stage-3-oncall-escalation-plan.md  2026-03-24-stage-4-incident-response-lifecycle-plan.md  2026-03-24-stage-5-automation-control-plane-plan.md
docs/superpowers/specs/: 2026-03-22-core-platform-spine-design.md  2026-03-22-gold-standard-final-pass-design.md  2026-03-23-release-supply-chain-gold-standard-design.md  2026-03-23-secrets-vault-gold-standard-design.md  2026-03-23-terminal-layout-endgame-design.md  2026-03-24-stage-2-operator-evolution-design.md  2026-03-24-stage-3-oncall-escalation-design.md  2026-03-24-stage-4-incident-response-lifecycle-design.md  2026-03-24-stage-5-automation-control-plane-design.md
packaging/arch/: PKGBUILD
scripts/: release_tooling.py  smoke_test.sh
src/cockpit/: __init__.py  __main__.py  app.py  bootstrap.py
src/cockpit/admin/: http_server.py  web_admin_service.py
src/cockpit/application/dispatch/: __init__.py  command_dispatcher.py  command_parser.py  event_bus.py
src/cockpit/application/handlers/: __init__.py  base.py  cron_handlers.py  curl_handlers.py  db_handlers.py  docker_handlers.py  escalation_handlers.py  layout_handlers.py  layout_payload.py  response_handlers.py  session_handlers.py  tab_handlers.py  terminal_handlers.py  workspace_handlers.py
src/cockpit/application/services/: __init__.py  activity_log_service.py  approval_service.py  component_watch_service.py  connection_service.py  datasource_service.py  escalation_policy_service.py  escalation_service.py  guard_policy_service.py  incident_service.py  layout_service.py  navigation_controller.py  (+17 more)
src/cockpit/bootstrap/: __init__.py  container.py  wire_admin.py  wire_core.py  wire_datasources.py  wire_notifications.py  wire_ops.py  wire_plugins.py  wire_ui.py  wire_workspace.py
src/cockpit/core/: command.py  enums.py  panel_state.py  risk.py  types.py  utils.py
src/cockpit/notifications/: events.py  models.py
src/cockpit/plugins/: __init__.py  loader.py  models.py  notes_plugin.py
src/cockpit/runtime/: escalation_monitor.py  health_monitor.py  pty_manager.py  response_monitor.py  stream_router.py  task_supervisor.py
src/cockpit/shared/: __init__.py  config.py  enums.py  risk.py  types.py  utils.py
src/cockpit/terminal/: __init__.py
src/cockpit/tooling/: __init__.py  release.py
src/cockpit/ui/: branding.py
src/cockpit/workspace/: config_loader.py  events.py  repositories.py
tests/e2e/: __init__.py  test_app_resume_flow.py  test_embedded_terminal_widget.py
tests/integration/: __init__.py  test_activity_log_service.py  test_datasource_live_backends.py  test_git_adapter.py  test_navigation_controller.py  test_ops_repositories.py  test_pty_manager.py  test_sqlite_repositories.py  test_stage3_ops_repositories.py  test_stage4_ops_repositories.py  test_web_admin_server.py
tests/unit/: __init__.py  test_app_cli.py  test_approval_service.py  test_clipboard_service.py  test_command_parser.py  test_component_watch_service.py  test_config_loader.py  test_connection_service.py  test_cron_adapter.py  test_cron_handler.py  test_curl_handler.py  test_database_adapter.py  test_datasource_service.py  test_db_handler.py  test_dispatcher.py  test_docker_adapter.py  test_docker_handler.py  test_escalation_policy_service.py  test_escalation_service.py  test_event_bus.py  test_git_adapter_remote.py  test_guard_policy_service.py  test_http_adapter.py  test_layout_handler.py  test_layout_service.py  test_models.py  test_notification_policy_service.py  test_notification_service.py  test_oncall_resolution_service.py  test_oncall_service.py  test_operations_diagnostics_service.py  test_ops_panel.py  test_plugin_loader.py  test_plugin_service.py  test_postincident_service.py  test_recovery_policy_service.py  test_release_tooling.py  test_remote_filesystem_adapter.py  test_response_executor_service.py  test_response_handlers.py  (+15 more)
web/layout-editor/: index.html  package-lock.json  package.json  vite.config.ts
web/layout-editor/src/: App.tsx  styles.css  types.ts
(+229 files in other folders)
