[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cockpit"
version = "0.1.0"
description = "Keyboard-first TUI platform for developer workspaces."
readme = "docs/superpowers/specs/2026-03-22-core-platform-spine-design.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "textual>=0.58.0",
]

[project.scripts]
cockpit = "cockpit.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cockpit"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

