[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cockpit-cli"
version = "0.1.36"
description = "Keyboard-first TUI platform for developer workspaces."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "cffi>=1.17",
  "packaging>=24.0",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "textual>=0.58.0",
]

[project.optional-dependencies]
analytics = [
  "ibis-framework>=10.0",
]
postgres = [
  "psycopg[binary]>=3.2",
]
mysql = [
  "PyMySQL>=1.1",
]
mariadb = [
  "mariadb>=1.1",
]
mssql = [
  "pyodbc>=5.1",
]
duckdb = [
  "duckdb>=1.1",
  "duckdb-engine>=0.13",
]
bigquery = [
  "google-cloud-bigquery>=3.30",
  "sqlalchemy-bigquery>=1.16.0",
]
snowflake = [
  "snowflake-sqlalchemy>=1.6",
]
mongo = [
  "pymongo>=4.10",
]
redis = [
  "redis>=5.0",
]
chroma = [
  "chromadb>=0.5",
]
secrets = [
  "cryptography>=44.0",
  "keyring>=25.6",
]
vault = [
  "cryptography>=44.0",
  "keyring>=25.6",
]
all-datasources-pure = [
  "ibis-framework>=10.0",
  "psycopg[binary]>=3.2",
  "PyMySQL>=1.1",
  "duckdb>=1.1",
  "duckdb-engine>=0.13",
  "google-cloud-bigquery>=3.30",
  "sqlalchemy-bigquery>=1.16.0",
  "pymongo>=4.10",
  "redis>=5.0",
]
all-datasources-native = [
  "ibis-framework>=10.0",
  "psycopg[binary]>=3.2",
  "PyMySQL>=1.1",
  "mariadb>=1.1",
  "pyodbc>=5.1",
  "duckdb>=1.1",
  "duckdb-engine>=0.13",
  "google-cloud-bigquery>=3.30",
  "sqlalchemy-bigquery>=1.16.0",
  "snowflake-sqlalchemy>=1.6",
  "pymongo>=4.10",
  "redis>=5.0",
  "chromadb>=0.5",
]
all-datasources = [
  "ibis-framework>=10.0",
  "psycopg[binary]>=3.2",
  "PyMySQL>=1.1",
  "mariadb>=1.1",
  "pyodbc>=5.1",
  "duckdb>=1.1",
  "duckdb-engine>=0.13",
  "google-cloud-bigquery>=3.30",
  "sqlalchemy-bigquery>=1.16.0",
  "snowflake-sqlalchemy>=1.6",
  "pymongo>=4.10",
  "redis>=5.0",
  "chromadb>=0.5",
]
dev = [
  "build>=1.2",
  "textual>=0.58.0",
]
release = [
  "build>=1.2",
  "cyclonedx-bom>=4.2",
  "sigstore>=3.6",
]

[project.scripts]
cockpit-cli = "cockpit.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cockpit"]

[tool.hatch.build.targets.wheel.force-include]
"third_party/libvterm" = "third_party/libvterm"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/third_party/libvterm",
  "/web/layout-editor",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
